# master-browser

./: .gitignore  README.md  VISION.md  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: package-lock.json  package.json
frontend/src/components/: MediaViewer.tsx  RawDiskViewer.tsx
frontend/src/pages/: index.tsx
pkgconfig/: javascriptcoregtk-4.0.pc  webkit2gtk-4.0.pc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ext4_raw.rs  main.rs
src-tauri/src/fs_parser/: mod.rs
