[package]
name = "master-browser"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
sysinfo = "0.29"
walkdir = "2"
zip = "0.6"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
image = "0.24"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.21"

[build-dependencies]
tauri-build = "1.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# it enables the custom protocol for the tauri:// scheme
custom-protocol = ["tauri/custom-protocol"]
