[package]
name = "master-browser"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
sysinfo = "0.29"
walkdir = "2"
zip = "0.6"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
image = "0.24"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.21"
ntfs = "0.4"
fatfs = "0.3"
fscommon = "0.1"
once_cell = "1.19"
ext4_rs = { git = "https://github.com/yuoo655/ext4_rs", branch = "master" }
# Pin wry to 0.24.3 to avoid broken 0.24.11 on Linux (SettingsExt error)
wry = "=0.24.3"

[build-dependencies]
tauri-build = "1.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
